[package]
name = "actix_starter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "=4.0.0-beta.9"}
serde = { version = "1.0.130", features = ["derive"]}
serde_json = { version = "1.0.67", features = ["preserve_order"] }
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
tracing = "0.1.26"
tracing-subscriber = "0.2.20"
derive_more = {version = "0.99.0"}
thiserror = "1.0.28"
validator = { version = "0.14.0", features = ["derive"] }
sea-orm = {version = "0.2.6", default-features = false, features=["macros", "sqlx-mysql", "runtime-actix-rustls", "debug-print", "with-json"]}
# lazy_static = "1.4.0"
# async-std = "1.10.0"